[tool.poetry]
name = "gbt_rfi_webpage"
version = "0.1.0"
description = ""
authors = ["Joy Skipper"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
django = "^2"
pandas = "^1.0.4"
psycopg2-binary = "^2.8.5"
astropy = "^4.0.1"
mysqlclient = "^2.0.1"
chaussette = "^1.3.0"
pydotplus = "^2.0.2"
tqdm = "^4.60.0"
jedi = "<0.18"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.2"
ipython = "^7.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
